--- a/HW/assignment1/features.ipynb
+++ b/HW/assignment1/features.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -23,141 +23,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# packages in environment at /Users/yunfanzhang/anaconda/envs/pydsci:\n",
-      "#\n",
-      "_nb_ext_conf              0.3.0                    py35_0  \n",
-      "alabaster                 0.7.7                     <pip>\n",
-      "anaconda-client           1.5.1                    py35_0  \n",
-      "appnope                   0.1.0                    py35_0  \n",
-      "babel                     2.2.0                     <pip>\n",
-      "basemap                   1.0.7               np111py35_0  \n",
-      "bokeh                     0.12.2                   py35_0  \n",
-      "check-manifest            0.31                      <pip>\n",
-      "chest                     0.2.3                    py35_0  \n",
-      "cloudpickle               0.2.1                    py35_0  \n",
-      "clyent                    1.2.2                    py35_0  \n",
-      "cov-core                  1.15.0                    <pip>\n",
-      "coverage                  4.0.3                     <pip>\n",
-      "coveralls                 1.1                       <pip>\n",
-      "cycler                    0.10.0                   py35_0  \n",
-      "dask                      0.11.0                   py35_0  \n",
-      "datashader                0.3.0                    py35_0  \n",
-      "datashape                 0.5.2                    py35_0  \n",
-      "decorator                 4.0.10                   py35_0  \n",
-      "docopt                    0.6.2                     <pip>\n",
-      "docutils                  0.12                      <pip>\n",
-      "entrypoints               0.2.2                    py35_0  \n",
-      "freetype                  2.5.5                         1  \n",
-      "geos                      3.4.2                         0  \n",
-      "heapdict                  1.0.0                    py35_1  \n",
-      "ipykernel                 4.4.1                    py35_0  \n",
-      "ipython                   5.1.0                    py35_0  \n",
-      "ipython-genutils          0.1.0                     <pip>\n",
-      "ipython_genutils          0.1.0                    py35_0  \n",
-      "ipywidgets                5.2.2                    py35_0  \n",
-      "jarn.viewdoc              1.7                       <pip>\n",
-      "jbig                      2.1                           0  \n",
-      "jinja2                    2.8                      py35_1  \n",
-      "jpeg                      8d                            1  \n",
-      "jsonschema                2.5.1                    py35_0  \n",
-      "jupyter                   1.0.0                    py35_3  \n",
-      "jupyter-client            4.3.0                     <pip>\n",
-      "jupyter-console           5.0.0                     <pip>\n",
-      "jupyter-core              4.1.1                     <pip>\n",
-      "jupyter_client            4.3.0                    py35_0  \n",
-      "jupyter_console           5.0.0                    py35_0  \n",
-      "jupyter_core              4.1.1                    py35_0  \n",
-      "libpng                    1.6.22                        0  \n",
-      "libtiff                   4.0.6                         2  \n",
-      "llvmlite                  0.13.0                   py35_0  \n",
-      "locket                    0.2.0                    py35_1  \n",
-      "markupsafe                0.23                     py35_2  \n",
-      "matplotlib                1.5.1               np111py35_0  \n",
-      "mistune                   0.7.2                    py35_1  \n",
-      "mkl                       11.3.3                        0  \n",
-      "multipledispatch          0.4.8                    py35_0  \n",
-      "nb-anacondacloud          1.2.0                     <pip>\n",
-      "nb-conda                  2.0.0                     <pip>\n",
-      "nb-conda-kernels          2.0.0                     <pip>\n",
-      "nb_anacondacloud          1.2.0                    py35_0  \n",
-      "nb_conda                  2.0.0                    py35_0  \n",
-      "nb_conda_kernels          2.0.0                    py35_0  \n",
-      "nbconvert                 4.2.0                    py35_0  \n",
-      "nbformat                  4.1.0                    py35_0  \n",
-      "nbpresent                 3.0.2                    py35_0  \n",
-      "networkx                  1.11                     py35_0  \n",
-      "nose                      1.3.7                     <pip>\n",
-      "nose-cov                  1.6                       <pip>\n",
-      "notebook                  4.2.2                    py35_0  \n",
-      "numba                     0.28.1              np111py35_0  \n",
-      "numexpr                   2.6.1               np111py35_0  \n",
-      "numpy                     1.11.1                   py35_0  \n",
-      "odo                       0.5.0                    py35_1  \n",
-      "openssl                   1.0.2h                        2  \n",
-      "pandas                    0.18.1              np111py35_0  \n",
-      "partd                     0.3.6                    py35_0  \n",
-      "path.py                   8.2.1                    py35_0  \n",
-      "pep8                      1.7.0                     <pip>\n",
-      "pexpect                   4.0.1                    py35_0  \n",
-      "pickleshare               0.7.3                    py35_0  \n",
-      "pillow (/Users/yunfanzhang/anaconda/envs/pydsci/lib/python3.5/site-packages) 3.3.1                     <pip>\n",
-      "pillow                    3.3.1                    py35_0  \n",
-      "pip                       8.1.2                    py35_0  \n",
-      "plotly                    1.12.9                    <pip>\n",
-      "prompt-toolkit            1.0.3                     <pip>\n",
-      "prompt_toolkit            1.0.3                    py35_0  \n",
-      "ptyprocess                0.5.1                    py35_0  \n",
-      "pyflakes                  1.1.0                     <pip>\n",
-      "pygments                  2.1.3                    py35_0  \n",
-      "pyparsing                 2.1.4                    py35_0  \n",
-      "pyqt                      4.11.4                   py35_4  \n",
-      "pyroma                    2.0.2                     <pip>\n",
-      "python                    3.5.2                         0  \n",
-      "python-dateutil           2.5.3                    py35_0  \n",
-      "python.app                1.2                      py35_4  \n",
-      "pytz                      2016.6.1                 py35_0  \n",
-      "pyyaml                    3.11                     py35_4  \n",
-      "pyzmq                     15.4.0                   py35_0  \n",
-      "qt                        4.8.7                         4  \n",
-      "qtconsole                 4.2.1                    py35_0  \n",
-      "readline                  6.2                           2  \n",
-      "requests                  2.11.1                   py35_0  \n",
-      "scipy                     0.18.0              np111py35_0  \n",
-      "seaborn                   0.7.1                    py35_0  \n",
-      "setuptools                26.1.1                   py35_0  \n",
-      "simplegeneric             0.8.1                    py35_1  \n",
-      "sip                       4.18                     py35_0  \n",
-      "six                       1.10.0                   py35_0  \n",
-      "snowballstemmer           1.2.1                     <pip>\n",
-      "sphinx                    1.3.6                     <pip>\n",
-      "sphinx-rtd-theme          0.1.9                     <pip>\n",
-      "sqlite                    3.13.0                        0  \n",
-      "terminado                 0.6                      py35_0  \n",
-      "tk                        8.5.18                        0  \n",
-      "toolz                     0.8.0                    py35_0  \n",
-      "tornado                   4.4.1                    py35_0  \n",
-      "traitlets                 4.2.2                    py35_0  \n",
-      "wcwidth                   0.1.7                    py35_0  \n",
-      "wheel                     0.29.0                   py35_0  \n",
-      "widgetsnbextension        1.2.6                    py35_0  \n",
-      "xarray                    0.8.2                    py35_0  \n",
-      "xz                        5.2.2                         0  \n",
-      "yaml                      0.1.6                         0  \n",
-      "zlib                      1.2.8                         3  \n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
-   "source": [
-    "!conda list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
    "source": [
     "import random\n",
     "import numpy as np\n",
