--- a/HW/assignment1/svm.ipynb
+++ b/HW/assignment1/svm.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -55,11 +55,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training data shape:  (50000, 32, 32, 3)\n",
+      "Training labels shape:  (50000,)\n",
+      "Test data shape:  (10000, 32, 32, 3)\n",
+      "Test labels shape:  (10000,)\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the raw CIFAR-10 data.\n",
     "cifar10_dir = 'cs294_129/datasets/cifar-10-batches-py'\n",
@@ -100,11 +111,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train data shape:  (49000, 32, 32, 3)\n",
+      "Train labels shape:  (49000,)\n",
+      "Validation data shape:  (1000, 32, 32, 3)\n",
+      "Validation labels shape:  (1000,)\n",
+      "Test data shape:  (1000, 32, 32, 3)\n",
+      "Test labels shape:  (1000,)\n"
+     ]
+    }
+   ],
    "source": [
     "# Split the data into train, val, and test sets. In addition we will\n",
     "# create a small development set as a subset of the training data;\n",
@@ -148,11 +172,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training data shape:  (49000, 3072)\n",
+      "Validation data shape:  (1000, 3072)\n",
+      "Test data shape:  (1000, 3072)\n",
+      "dev data shape:  (500, 3072)\n"
+     ]
+    }
+   ],
    "source": [
     "# Preprocessing: reshape the image data into rows\n",
     "X_train = np.reshape(X_train, (X_train.shape[0], -1))\n",
@@ -169,16 +204,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 130.64189796  135.98173469  132.47391837  130.05569388  135.34804082\n",
+      "  131.75402041  130.96055102  136.14328571  132.47636735  131.48467347]\n"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP4AAAD9CAYAAACcAsr/AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEmxJREFUeJzt3V+MXNV9B/Dv19BGJUjUbWq7Yu2ddVETqarkRqql1Kls\nsKFuX4x4iCh5AFJFeSgJEg81pGqtRpEKebCEIvHCPxlUlEZI1ESqgr02NobE1Aq4NmAMFd61N2EX\nS0WJUKWIxL8+zN3NYM89c/c395wZ+/f9SJZn77/z2zvz2ztzf3POoZlBRGJZMeoARKQ8Jb5IQEp8\nkYCU+CIBKfFFAlLiiwQ0VOKT3E7ybZLvkNzZVlAikhe9dXySKwC8A2ArgJ8BOAbgdjN7u73wRCSH\nq4fYdyOAd81sFgBIfg/ADgCfSHyS+oaQyIiYGfstHybxrwdwrufnOXT/GFziW//6bQDAwekDuGnb\n1t6w6o/OvvF2VyWCYmK/Xgf2H8DWm38TS9P9Lm0vubbRmul909h2y7Ymu2U3/cI0tv3VtsEbAsmn\nz6v3kJeclwzBNH3De2DfNLb2xOJ9p5zaL3nEnv0OTh/ETdtuGtjWPz/wT7XrdHNPJKBhrvg/BbCu\n5+eJatklDk4fAACcee8Mzrz3HqbWrx+iWRHpp5tfZxptO0ziHwNwA8lJAO8DuB3A3/bbcPHt/Tgl\n/dT6qVGHsGT9H43HOQEUS52pcYql5rU7tX7qE+sOHXix9hjuxDezX5O8B8A+dD8yPG5mp1L7jEvS\nA+P1ohqrWG4Yo1jG6byMUSxtXLSGueLDzH4I4LMNtqzbv3YPJm51WOruV+qmS+qmWf+bn0Pu57z7\npTpIX+7TktjR3DcFkwf1rErH0vJrQjf3RAJS4osEpMQXCUiJLxKQEl8kICW+SEBDlfOaqit9mF1I\n7JSjTOY8Zqq5VJ+C1CGzfB8/WXd0rbpceH8F93funecz/X18Z3uOzh264osEpMQXCUiJLxKQEl8k\nICW+SEBKfJGAipTzausU7p50rlXpHn++UcCSdblkyS75q3trfe2XpspGMsyO3kN6h8LytpfaT73z\nRCQjJb5IQEp8kYCU+CIBKfFFAlLiiwRUppxXWytLldfKlpiSlbcMvfrSFUJnHTDJN0Bp6Y57OdrL\nUSbzl+zK7ldHV3yRgJT4IgEp8UUCUuKLBKTEFwloqLv6JGcA/BzABQAfm9nGNoISkbyGLeddALDF\nzD5MbVQ/2KavZOftbZWFd9TMHBU7rxztZfj98pT6xueY/liWv+ewb/XZwjFEpLBhk9YA7Cd5jORX\n2whIRPIb9q3+JjN7n+QfoPsH4JSZvdxGYCKSz1CJb2bvV/+fJ/kcgI0ALkn8Fw8cWnrcmepgan1n\nmGZFpI+ZMzOYOTPbaFt34pO8BsAKM/uI5KcB3ALgX/pte+PWLd5mRKShzlQHnanO0s+HX3ypdtth\nrvirATxH0qrj/JuZ7RvieCJSiDvxzewMgA0Nt647SGKP9ms+3gpTcpDOxFGdY3SOF3eXxrYDSR/T\n3ZzzeShfsmv3BaNSnEhASnyRgJT4IgEp8UUCUuKLBKTEFwmoyGCbZheWtXzwAetXpUtvOYxRVzOv\ncSrZZeCdAy8pMSBqnlKfd3LH/nTFFwlIiS8SkBJfJCAlvkhASnyRgJT4IgGNdO489/x47rneEu3l\n6PlVWJYOf6XHLs1xUHcPPN98g8ndfKG4e4HW0RVfJCAlvkhASnyRgJT4IgEp8UUCUuKLBDTScp57\nsE1n77yUVHUmWQZ0HjNH6c3byS4puWPp38J7yERPunTdOLGudO+8dumKLxKQEl8kICW+SEBKfJGA\nlPgiAQ1MfJKPk1wgeaJn2UqS+0ieJvkCyevyhikibWpSznsSwHcBPNWz7H4A02b2HZI7ATxQLeur\nvjSXKtmlihuJMqC7hObtnufbL0vpLSnHJHGF65UJ7oEqk1IlO2fZ2H1ifPM31hl4xTezlwF8eNHi\nHQD2VI/3ALh12S2LyMh4P+OvMrMFADCzeQCr2gtJRHJr6+be5TJWhYjA/5XdBZKrzWyB5BoAH6Q2\nPvTikaXHnc46dKYmnc2KSJ2ZmbOYnTnbaNumiU988k7H8wDuAvAQgDsB7E3tvOXGv2zYjIh4dTrr\n0OmsW/r5pcOv1G7bpJz3DIAfAfhjkmdJ3g3gQQA3kzwNYGv1s4hcJgZe8c3sjppV2xq3UjvYZv3c\neanBL7OU3rzNeQcMLS7HbRjnqJLuE5PhoKnnNvki9P7u3oFiE4NtOn51fXNPJCAlvkhASnyRgJT4\nIgEp8UUCUuKLBDS+g22mR7+sRee8eu4xF51x5lC+fJijvOZ83pNlskQsydFSUy0m2kvU19wvF3ec\n/emKLxKQEl8kICW+SEBKfJGAlPgiASnxRQIqUs4z1PTCS9U2ig+2mWqu/ZJdquNXsrdVhuphnjJg\n+2VVf8fLwkObOl+EqbJj2y8JXfFFAlLiiwSkxBcJSIkvEpASXyQgJb5IQCPtnZfugZcYxNJbXnPP\nZZeKxRdKirsk2f5pGbB2fIYT9T4Nydegs/Tm7szp7GFILv/6rSu+SEBKfJGAlPgiASnxRQJS4osE\n1GTuvMdJLpA80bNsF8k5kq9V/7bnDVNE2tSknPckgO8CeOqi5bvNbPdwzft653nnq0tXbnwFIe8x\nvSW78SqulS2rJltzTmWXHIjTOa+edw48/2Cwy38eBl7xzexlAB8uNxYRGV/DfMa/h+Rxko+RvK61\niEQkO2/iPwJgvZltADAPYMi3/CJSkusru2Z2vufHRwH8ILX94UOvLD2e7KxFp7PO06yIJMzMnMPs\n7LlG2zZNfKLnMz3JNWY2X/14G4A3Ujtv3rKpYTMi4tXprEWns3bp5yNHjtZuOzDxST4DYAuA3yd5\nFsAuADeS3ADgAoAZAF8bKmIRKWpg4pvZHX0WP7msVhxz53nXpTs/eUswCck43QdNrHMW+3KEmYOz\nLOcvEfrm1Us+7e7RUr2lvgzlPBG58ijxRQJS4osEpMQXCUiJLxKQEl8koDKDbdaUG8zZOy9LqS9H\nvSvDoKDeOely1POSz5+zTOaPxVmWc/agTE1wmB7A09e3LbWb52WmK75IQEp8kYCU+CIBKfFFAlLi\niwSkxBcJqFA5r4ZzQE3YhcQ6X3tu7p6CiUM6a1regUbz9M9z9hR0lruSZU5vWS7VWoaSXZIl5s5T\n7zwRaUKJLxKQEl8kICW+SEBKfJGAlPgiAZUp5znKaOlyXumee4l13p50zgpaumPbFTDYprNM5u5A\nmWHwS690FbDdFnXFFwlIiS8SkBJfJCAlvkhASnyRgAYmPskJkgdJvknyJMlvVMtXktxH8jTJF0he\nlz9cEWlDk3LerwDcZ2bHSV4L4Cck9wG4G8C0mX2H5E4ADwC4fzmNJ0t2yVJYhlKfk7vXW6pq5Tui\nu73SEh3NBuyYob3Cx0wPmpnqgZeMJrm2n4FXfDObN7Pj1eOPAJwCMAFgB4A91WZ7ANy67NZFZCSW\n9RmfZAfABgBHAaw2swWg+8cBwKq2gxORPBonfvU2/1kA91ZX/ovfX4zRm0kRSWn0lV2SV6Ob9E+b\n2d5q8QLJ1Wa2QHINgA/q9j98+MdLjycnJ9DprB0iZBHpZ3Z2DrOzc422bfpd/ScAvGVmD/csex7A\nXQAeAnAngL199gMAbN78hYbNiIjX5OQEJicnln4+cuTV2m0HJj7JTQC+DOAkydfRfUv/TXQT/vsk\nvwJgFsCXhgtbREoZmPhm9gqAq2pWb2s3nOE5K4SDVvo4y4feMHP03BtQR/JxDn7pfY7ST0Nqzr32\nz1m686H3Nbj8J0nf3BMJSIkvEpASXyQgJb5IQEp8kYCU+CIBjXbuPGcPPG8PNe+cdKlYclS7SpcB\n/Qd18k7yl2FOOu9gm17+I7rr1H3pii8SkBJfJCAlvkhASnyRgJT4IgEp8UUCGnE5LzG4oLOHk1+G\nEtqVPihRqmOb85DpkqSza6I3GndpsXR3x+XTFV8kICW+SEBKfJGAlPgiASnxRQJS4osENNJyXrJk\n55xBrvS8bGljFEzhKtJYnc7Sx/TWOZ0lSc+voCu+SEBKfJGAlPgiASnxRQJS4osENDDxSU6QPEjy\nTZInSX69Wr6L5BzJ16p/2/OHKyJtaFLO+xWA+8zsOMlrAfyE5P5q3W4z2z3wCJ56Q6oikqz01a90\nl5jcc5ol5Jg/zjnVW2n+MTMzdAd0HzPVszTHulQsy9dk0sx5APPV449IngJw/WI87YYjIiUs6zM+\nyQ6ADQAWJ96+h+Rxko+RvK7l2EQkk8bf3Kve5j8L4N7qyv8IgG+ZmZH8NoDdAP6u376HD/946fHk\n5AQ6nbXDRS0il5iZncPs7FyjbRslPsmr0U36p81sLwCY2fmeTR4F8IO6/Tdv/kKjYETErzM5gc7k\nxNLPR468Wrtt07f6TwB4y8weXlxAck3P+tsAvLG8MEVkVAZe8UluAvBlACdJvo7uDeJvAriD5AYA\nFwDMAPhaxjhFpEVN7uq/AuCqPqt+OHzzqR5HvnqeJUpv6SJZ6QKFs8CW6n6Y/BVyzP/n3DPDqU6V\nwoY4qHO/1CF95Tx/fbs/fXNPJCAlvkhASnyRgJT4IgEp8UUCUuKLBDS+g21m6BmVDsa3m7vbm3Ny\nQO9cfcnyqJvvmO7KW6oUltzPvdIXi3edcy5JD13xRQJS4osEpMQXCUiJLxKQEl8kICW+SEBFynme\nIoy3LMcV9X/LLFEmY3KkygyDPKZKdqmST7LU137JLs/Uct4yYI5SbY6SZPsDaqbLgMunK75IQEp8\nkYCU+CIBKfFFAlLiiwSkxBcJqFDvvP4FB3dJJLGXtxTmH/zSt1tqx2SYzmOWd/mX7JJH9LaXZX48\nDbYpIg0o8UUCUuKLBKTEFwloYOKT/BTJV0m+TvIkyV3V8pUk95E8TfIFTZMtcvkYmPhm9ksAN5rZ\nnwHYAOCvSW4EcD+AaTP7LICDAB7IGqmItKZROc/M/q96+KlqHwOwA8DmavkeAIfQ/WNwiboyhXdQ\nwnQvu5RUD7zkjhmMUyyFuSt2GXpJlp4zsXhPwf4afcYnuaKaKXcewH4zOwZgtZktAICZzQNYtfzm\nRWQUGiW+mV2o3upPANhI8k9w6XXpSr9OiVwxlvXNPTP7BclDALYDWCC52swWSK4B8EHdfocO/Wjp\ncaezFp3OWme4IlJnZuYcZmbnGm07MPFJfgbAx2b2c5K/A+BmAA8CeB7AXQAeAnAngL11x9iy5S8a\nBSMifhdfVF966Wjttk2u+H8IYA/JFeh+NPh3M/tPkkcBfJ/kVwDMAvjSUFGLSDEDE9/MTgL4fJ/l\n/wtgW46gRCSvEffOa78HV+HiTCZX+n3SHHPg+WQ506U7eqp3nog0ocQXCaho4s/MnCvZXJJi6W+c\nYjkzRrGM03lpI5a4id+w3lmCYulvrGKZGaNYWjgveqsvEpASXyQgpnq6tdIAeaXXpkTGlln/iR+z\nJ76IjB+91RcJSIkvElCxxCe5neTbJN8hubNUuzWxzJD872ocwf8q3PbjJBdInuhZNpLxC2ti2UVy\njuRr1b/tBeKYIHmQ5JvVuI7fqJYXPy99Yvl6tXwU5yXfeJdmlv0fun9g/gfAJIDfAnAcwOdKtF0T\nz3sAVo6o7S+iO3bhiZ5lDwH4h+rxTgAPjjCWXQDuK3xO1gDYUD2+FsBpAJ8bxXlJxFL8vFQxXFP9\nfxWAowA2tnFeSl3xNwJ418xmzexjAN9Dd8y+USFG9DHHzF4G8OFFi3egO24hqv9vHWEsQOG+TmY2\nb2bHq8cfATiF7mhPxc9LTSzXV6uL9wGz+vEuhzovpV781wPo/dreHH5zMkfBAOwneYzkV0cYx6JV\nNl7jF95D8jjJx0oPm06yg+67kKMY8biOPbG8Wi0qfl5yjXcZ9ebeJjP7PIC/AfD3JL846oAuMsoa\n6yMA1pvZBnRfbLtLNUzyWgDPAri3utqObFzHPrGM5LxYpvEuSyX+TwGs6/l5olo2Emb2fvX/eQDP\noftRZJQWSK4GgEHjF+ZmZuet+vAI4FEAf16iXZJXo5toT5vZ4jBuIzkv/WIZ1XlZZGa/QHcI+6Xx\nLqtYXeelVOIfA3ADyUmSvw3gdnTH7CuO5DXVX3OQ/DSAWwC8UToMfPLz4uL4hcCA8Qtzx1K9kBbd\nhnLn5gkAb5nZwz3LRnVeLollFOeF5GcWP1L0jHd5Cm2cl4J3J7eje4f0XQD3l7472hPHFLpVhdcB\nnCwdC4BnAPwMwC8BnAVwN4CVAKar87MPwO+OMJanAJyoztF/oPt5MnccmwD8uud5ea16vfxe6fOS\niGUU5+VPq/aPV23/Y7V86POir+yKBBT15p5IaEp8kYCU+CIBKfFFAlLiiwSkxBcJSIkvEpASXySg\n/wfUdIPGXw2sCwAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x106f16150>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Preprocessing: subtract the mean image\n",
     "# first: compute the image mean based on the training data\n",
     "mean_image = np.mean(X_train, axis=0)\n",
-    "print mean_image[:10] # print a few of the elements\n",
+    "print mean_image[:10] # print a few of the elements (from vector of data)\n",
     "plt.figure(figsize=(4,4))\n",
     "plt.imshow(mean_image.reshape((32,32,3)).astype('uint8')) # visualize the mean image\n",
     "plt.show()"
@@ -186,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -201,11 +255,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(49000, 3073) (1000, 3073) (1000, 3073) (500, 3073)\n"
+     ]
+    }
+   ],
    "source": [
     "# third: append the bias dimension of ones (i.e. bias trick) so that our SVM\n",
     "# only has to worry about optimizing a single weight matrix W.\n",
@@ -230,11 +292,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss: 8.678903\n"
+     ]
+    }
+   ],
    "source": [
     "# Evaluate the naive implementation of the loss we provided for you:\n",
     "from cs294_129.classifiers.linear_svm import svm_loss_naive\n",
@@ -248,6 +318,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  1.,   1.,   1.],\n",
+       "       [  2.,   2.,   2.],\n",
+       "       [  3.,   3.,   3.],\n",
+       "       [  4.,   4.,   4.],\n",
+       "       [  5.,   5.,   5.],\n",
+       "       [  6.,   6.,   6.],\n",
+       "       [  7.,   7.,   7.],\n",
+       "       [  8.,   8.,   8.],\n",
+       "       [  9.,   9.,   9.],\n",
+       "       [ 10.,  10.,  10.]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(10).reshape((10,1))+np.ones(3).reshape((1,3))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -258,11 +359,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (10,) (3073,) (10,) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-cc6861e8dce3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Compute the loss and its gradient at W.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mloss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msvm_loss_naive\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mW\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_dev\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_dev\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# Numerically compute the gradient along several randomly chosen dimensions, and\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/yunfanzhang/Documents/Academics/CS294-129/HW/assignment1/cs294_129/classifiers/linear_svm.py\u001b[0m in \u001b[0;36msvm_loss_naive\u001b[0;34m(W, X, y, reg)\u001b[0m\n\u001b[1;32m     35\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0mmargin\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m         \u001b[0mloss\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mmargin\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 37\u001b[0;31m         \u001b[0mdw\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     38\u001b[0m         \u001b[0mdw\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-=\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (10,) (3073,) (10,) "
+     ]
+    }
+   ],
    "source": [
     "# Once you've implemented the gradient, recompute it with the code below\n",
     "# and gradient check it with the function we provided for you\n",
@@ -547,9 +661,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:astro]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "conda-env-astro-py"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
