--- a/HW/assignment1/svm.ipynb
+++ b/HW/assignment1/svm.ipynb
@@ -221,7 +221,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP4AAAD9CAYAAACcAsr/AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEmxJREFUeJzt3V+MXNV9B/Dv19BGJUjUbWq7Yu2ddVETqarkRqql1Kls\nsKFuX4x4iCh5AFJFeSgJEg81pGqtRpEKebCEIvHCPxlUlEZI1ESqgr02NobE1Aq4NmAMFd61N2EX\nS0WJUKWIxL8+zN3NYM89c/c395wZ+/f9SJZn77/z2zvz2ztzf3POoZlBRGJZMeoARKQ8Jb5IQEp8\nkYCU+CIBKfFFAlLiiwQ0VOKT3E7ybZLvkNzZVlAikhe9dXySKwC8A2ArgJ8BOAbgdjN7u73wRCSH\nq4fYdyOAd81sFgBIfg/ADgCfSHyS+oaQyIiYGfstHybxrwdwrufnOXT/GFziW//6bQDAwekDuGnb\n1t6w6o/OvvF2VyWCYmK/Xgf2H8DWm38TS9P9Lm0vubbRmul909h2y7Ymu2U3/cI0tv3VtsEbAsmn\nz6v3kJeclwzBNH3De2DfNLb2xOJ9p5zaL3nEnv0OTh/ETdtuGtjWPz/wT7XrdHNPJKBhrvg/BbCu\n5+eJatklDk4fAACcee8Mzrz3HqbWrx+iWRHpp5tfZxptO0ziHwNwA8lJAO8DuB3A3/bbcPHt/Tgl\n/dT6qVGHsGT9H43HOQEUS52pcYql5rU7tX7qE+sOHXix9hjuxDezX5O8B8A+dD8yPG5mp1L7jEvS\nA+P1ohqrWG4Yo1jG6byMUSxtXLSGueLDzH4I4LMNtqzbv3YPJm51WOruV+qmS+qmWf+bn0Pu57z7\npTpIX+7TktjR3DcFkwf1rErH0vJrQjf3RAJS4osEpMQXCUiJLxKQEl8kICW+SEBDlfOaqit9mF1I\n7JSjTOY8Zqq5VJ+C1CGzfB8/WXd0rbpceH8F93funecz/X18Z3uOzh264osEpMQXCUiJLxKQEl8k\nICW+SEBKfJGAipTzausU7p50rlXpHn++UcCSdblkyS75q3trfe2XpspGMsyO3kN6h8LytpfaT73z\nRCQjJb5IQEp8kYCU+CIBKfFFAlLiiwRUppxXWytLldfKlpiSlbcMvfrSFUJnHTDJN0Bp6Y57OdrL\nUSbzl+zK7ldHV3yRgJT4IgEp8UUCUuKLBKTEFwloqLv6JGcA/BzABQAfm9nGNoISkbyGLeddALDF\nzD5MbVQ/2KavZOftbZWFd9TMHBU7rxztZfj98pT6xueY/liWv+ewb/XZwjFEpLBhk9YA7Cd5jORX\n2whIRPIb9q3+JjN7n+QfoPsH4JSZvdxGYCKSz1CJb2bvV/+fJ/kcgI0ALkn8Fw8cWnrcmepgan1n\nmGZFpI+ZMzOYOTPbaFt34pO8BsAKM/uI5KcB3ALgX/pte+PWLd5mRKShzlQHnanO0s+HX3ypdtth\nrvirATxH0qrj/JuZ7RvieCJSiDvxzewMgA0Nt647SGKP9ms+3gpTcpDOxFGdY3SOF3eXxrYDSR/T\n3ZzzeShfsmv3BaNSnEhASnyRgJT4IgEp8UUCUuKLBKTEFwmoyGCbZheWtXzwAetXpUtvOYxRVzOv\ncSrZZeCdAy8pMSBqnlKfd3LH/nTFFwlIiS8SkBJfJCAlvkhASnyRgJT4IgGNdO489/x47rneEu3l\n6PlVWJYOf6XHLs1xUHcPPN98g8ndfKG4e4HW0RVfJCAlvkhASnyRgJT4IgEp8UUCUuKLBDTScp57\nsE1n77yUVHUmWQZ0HjNH6c3byS4puWPp38J7yERPunTdOLGudO+8dumKLxKQEl8kICW+SEBKfJGA\nlPgiAQ1MfJKPk1wgeaJn2UqS+0ieJvkCyevyhikibWpSznsSwHcBPNWz7H4A02b2HZI7ATxQLeur\nvjSXKtmlihuJMqC7hObtnufbL0vpLSnHJHGF65UJ7oEqk1IlO2fZ2H1ifPM31hl4xTezlwF8eNHi\nHQD2VI/3ALh12S2LyMh4P+OvMrMFADCzeQCr2gtJRHJr6+be5TJWhYjA/5XdBZKrzWyB5BoAH6Q2\nPvTikaXHnc46dKYmnc2KSJ2ZmbOYnTnbaNumiU988k7H8wDuAvAQgDsB7E3tvOXGv2zYjIh4dTrr\n0OmsW/r5pcOv1G7bpJz3DIAfAfhjkmdJ3g3gQQA3kzwNYGv1s4hcJgZe8c3sjppV2xq3UjvYZv3c\neanBL7OU3rzNeQcMLS7HbRjnqJLuE5PhoKnnNvki9P7u3oFiE4NtOn51fXNPJCAlvkhASnyRgJT4\nIgEp8UUCUuKLBDS+g22mR7+sRee8eu4xF51x5lC+fJijvOZ83pNlskQsydFSUy0m2kvU19wvF3ec\n/emKLxKQEl8kICW+SEBKfJGAlPgiASnxRQIqUs4z1PTCS9U2ig+2mWqu/ZJdquNXsrdVhuphnjJg\n+2VVf8fLwkObOl+EqbJj2y8JXfFFAlLiiwSkxBcJSIkvEpASXyQgJb5IQCPtnZfugZcYxNJbXnPP\nZZeKxRdKirsk2f5pGbB2fIYT9T4Nydegs/Tm7szp7GFILv/6rSu+SEBKfJGAlPgiASnxRQJS4osE\n1GTuvMdJLpA80bNsF8k5kq9V/7bnDVNE2tSknPckgO8CeOqi5bvNbPdwzft653nnq0tXbnwFIe8x\nvSW78SqulS2rJltzTmWXHIjTOa+edw48/2Cwy38eBl7xzexlAB8uNxYRGV/DfMa/h+Rxko+RvK61\niEQkO2/iPwJgvZltADAPYMi3/CJSkusru2Z2vufHRwH8ILX94UOvLD2e7KxFp7PO06yIJMzMnMPs\n7LlG2zZNfKLnMz3JNWY2X/14G4A3Ujtv3rKpYTMi4tXprEWns3bp5yNHjtZuOzDxST4DYAuA3yd5\nFsAuADeS3ADgAoAZAF8bKmIRKWpg4pvZHX0WP7msVhxz53nXpTs/eUswCck43QdNrHMW+3KEmYOz\nLOcvEfrm1Us+7e7RUr2lvgzlPBG58ijxRQJS4osEpMQXCUiJLxKQEl8koDKDbdaUG8zZOy9LqS9H\nvSvDoKDeOely1POSz5+zTOaPxVmWc/agTE1wmB7A09e3LbWb52WmK75IQEp8kYCU+CIBKfFFAlLi\niwSkxBcJqFA5r4ZzQE3YhcQ6X3tu7p6CiUM6a1regUbz9M9z9hR0lruSZU5vWS7VWoaSXZIl5s5T\n7zwRaUKJLxKQEl8kICW+SEBKfJGAlPgiAZUp5znKaOlyXumee4l13p50zgpaumPbFTDYprNM5u5A\nmWHwS690FbDdFnXFFwlIiS8SkBJfJCAlvkhASnyRgAYmPskJkgdJvknyJMlvVMtXktxH8jTJF0he\nlz9cEWlDk3LerwDcZ2bHSV4L4Cck9wG4G8C0mX2H5E4ADwC4fzmNJ0t2yVJYhlKfk7vXW6pq5Tui\nu73SEh3NBuyYob3Cx0wPmpnqgZeMJrm2n4FXfDObN7Pj1eOPAJwCMAFgB4A91WZ7ANy67NZFZCSW\n9RmfZAfABgBHAaw2swWg+8cBwKq2gxORPBonfvU2/1kA91ZX/ovfX4zRm0kRSWn0lV2SV6Ob9E+b\n2d5q8QLJ1Wa2QHINgA/q9j98+MdLjycnJ9DprB0iZBHpZ3Z2DrOzc422bfpd/ScAvGVmD/csex7A\nXQAeAnAngL199gMAbN78hYbNiIjX5OQEJicnln4+cuTV2m0HJj7JTQC+DOAkydfRfUv/TXQT/vsk\nvwJgFsCXhgtbREoZmPhm9gqAq2pWb2s3nOE5K4SDVvo4y4feMHP03BtQR/JxDn7pfY7ST0Nqzr32\nz1m686H3Nbj8J0nf3BMJSIkvEpASXyQgJb5IQEp8kYCU+CIBjXbuPGcPPG8PNe+cdKlYclS7SpcB\n/Qd18k7yl2FOOu9gm17+I7rr1H3pii8SkBJfJCAlvkhASnyRgJT4IgEp8UUCGnE5LzG4oLOHk1+G\nEtqVPihRqmOb85DpkqSza6I3GndpsXR3x+XTFV8kICW+SEBKfJGAlPgiASnxRQJS4osENNJyXrJk\n55xBrvS8bGljFEzhKtJYnc7Sx/TWOZ0lSc+voCu+SEBKfJGAlPgiASnxRQJS4osENDDxSU6QPEjy\nTZInSX69Wr6L5BzJ16p/2/OHKyJtaFLO+xWA+8zsOMlrAfyE5P5q3W4z2z3wCJ56Q6oikqz01a90\nl5jcc5ol5Jg/zjnVW2n+MTMzdAd0HzPVszTHulQsy9dk0sx5APPV449IngJw/WI87YYjIiUs6zM+\nyQ6ADQAWJ96+h+Rxko+RvK7l2EQkk8bf3Kve5j8L4N7qyv8IgG+ZmZH8NoDdAP6u376HD/946fHk\n5AQ6nbXDRS0il5iZncPs7FyjbRslPsmr0U36p81sLwCY2fmeTR4F8IO6/Tdv/kKjYETErzM5gc7k\nxNLPR468Wrtt07f6TwB4y8weXlxAck3P+tsAvLG8MEVkVAZe8UluAvBlACdJvo7uDeJvAriD5AYA\nFwDMAPhaxjhFpEVN7uq/AuCqPqt+OHzzqR5HvnqeJUpv6SJZ6QKFs8CW6n6Y/BVyzP/n3DPDqU6V\nwoY4qHO/1CF95Tx/fbs/fXNPJCAlvkhASnyRgJT4IgEp8UUCUuKLBDS+g21m6BmVDsa3m7vbm3Ny\nQO9cfcnyqJvvmO7KW6oUltzPvdIXi3edcy5JD13xRQJS4osEpMQXCUiJLxKQEl8kICW+SEBFynme\nIoy3LMcV9X/LLFEmY3KkygyDPKZKdqmST7LU137JLs/Uct4yYI5SbY6SZPsDaqbLgMunK75IQEp8\nkYCU+CIBKfFFAlLiiwSkxBcJqFDvvP4FB3dJJLGXtxTmH/zSt1tqx2SYzmOWd/mX7JJH9LaXZX48\nDbYpIg0o8UUCUuKLBKTEFwloYOKT/BTJV0m+TvIkyV3V8pUk95E8TfIFTZMtcvkYmPhm9ksAN5rZ\nnwHYAOCvSW4EcD+AaTP7LICDAB7IGqmItKZROc/M/q96+KlqHwOwA8DmavkeAIfQ/WNwiboyhXdQ\nwnQvu5RUD7zkjhmMUyyFuSt2GXpJlp4zsXhPwf4afcYnuaKaKXcewH4zOwZgtZktAICZzQNYtfzm\nRWQUGiW+mV2o3upPANhI8k9w6XXpSr9OiVwxlvXNPTP7BclDALYDWCC52swWSK4B8EHdfocO/Wjp\ncaezFp3OWme4IlJnZuYcZmbnGm07MPFJfgbAx2b2c5K/A+BmAA8CeB7AXQAeAnAngL11x9iy5S8a\nBSMifhdfVF966Wjttk2u+H8IYA/JFeh+NPh3M/tPkkcBfJ/kVwDMAvjSUFGLSDEDE9/MTgL4fJ/l\n/wtgW46gRCSvEffOa78HV+HiTCZX+n3SHHPg+WQ506U7eqp3nog0ocQXCaho4s/MnCvZXJJi6W+c\nYjkzRrGM03lpI5a4id+w3lmCYulvrGKZGaNYWjgveqsvEpASXyQgpnq6tdIAeaXXpkTGlln/iR+z\nJ76IjB+91RcJSIkvElCxxCe5neTbJN8hubNUuzWxzJD872ocwf8q3PbjJBdInuhZNpLxC2ti2UVy\njuRr1b/tBeKYIHmQ5JvVuI7fqJYXPy99Yvl6tXwU5yXfeJdmlv0fun9g/gfAJIDfAnAcwOdKtF0T\nz3sAVo6o7S+iO3bhiZ5lDwH4h+rxTgAPjjCWXQDuK3xO1gDYUD2+FsBpAJ8bxXlJxFL8vFQxXFP9\nfxWAowA2tnFeSl3xNwJ418xmzexjAN9Dd8y+USFG9DHHzF4G8OFFi3egO24hqv9vHWEsQOG+TmY2\nb2bHq8cfATiF7mhPxc9LTSzXV6uL9wGz+vEuhzovpV781wPo/dreHH5zMkfBAOwneYzkV0cYx6JV\nNl7jF95D8jjJx0oPm06yg+67kKMY8biOPbG8Wi0qfl5yjXcZ9ebeJjP7PIC/AfD3JL846oAuMsoa\n6yMA1pvZBnRfbLtLNUzyWgDPAri3utqObFzHPrGM5LxYpvEuSyX+TwGs6/l5olo2Emb2fvX/eQDP\noftRZJQWSK4GgEHjF+ZmZuet+vAI4FEAf16iXZJXo5toT5vZ4jBuIzkv/WIZ1XlZZGa/QHcI+6Xx\nLqtYXeelVOIfA3ADyUmSvw3gdnTH7CuO5DXVX3OQ/DSAWwC8UToMfPLz4uL4hcCA8Qtzx1K9kBbd\nhnLn5gkAb5nZwz3LRnVeLollFOeF5GcWP1L0jHd5Cm2cl4J3J7eje4f0XQD3l7472hPHFLpVhdcB\nnCwdC4BnAPwMwC8BnAVwN4CVAKar87MPwO+OMJanAJyoztF/oPt5MnccmwD8uud5ea16vfxe6fOS\niGUU5+VPq/aPV23/Y7V86POir+yKBBT15p5IaEp8kYCU+CIBKfFFAlLiiwSkxBcJSIkvEpASXySg\n/wfUdIPGXw2sCwAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x106f16150>"
+       "<matplotlib.figure.Figure at 0x10408f390>"
       ]
      },
      "metadata": {},
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -301,7 +301,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss: 8.678903\n"
+      "loss: 9.350424\n"
      ]
     }
    ],
@@ -318,37 +318,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[  1.,   1.,   1.],\n",
-       "       [  2.,   2.,   2.],\n",
-       "       [  3.,   3.,   3.],\n",
-       "       [  4.,   4.,   4.],\n",
-       "       [  5.,   5.,   5.],\n",
-       "       [  6.,   6.,   6.],\n",
-       "       [  7.,   7.,   7.],\n",
-       "       [  8.,   8.,   8.],\n",
-       "       [  9.,   9.,   9.],\n",
-       "       [ 10.,  10.,  10.]])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.arange(10).reshape((10,1))+np.ones(3).reshape((1,3))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -359,21 +328,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "operands could not be broadcast together with shapes (10,) (3073,) (10,) ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-cc6861e8dce3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Compute the loss and its gradient at W.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mloss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msvm_loss_naive\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mW\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_dev\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_dev\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# Numerically compute the gradient along several randomly chosen dimensions, and\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/yunfanzhang/Documents/Academics/CS294-129/HW/assignment1/cs294_129/classifiers/linear_svm.py\u001b[0m in \u001b[0;36msvm_loss_naive\u001b[0;34m(W, X, y, reg)\u001b[0m\n\u001b[1;32m     35\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0mmargin\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m         \u001b[0mloss\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mmargin\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 37\u001b[0;31m         \u001b[0mdw\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     38\u001b[0m         \u001b[0mdw\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-=\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (10,) (3073,) (10,) "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "numerical: 19.460803 analytic: 19.460803, relative error: 3.423134e-12\n",
+      "numerical: 29.782618 analytic: 29.782618, relative error: 1.489414e-11\n",
+      "numerical: 5.825105 analytic: 5.825105, relative error: 3.305489e-12\n",
+      "numerical: 24.930997 analytic: 24.898493, relative error: 6.523060e-04\n",
+      "numerical: -16.007491 analytic: -16.007491, relative error: 1.546816e-11\n",
+      "numerical: 1.858453 analytic: 1.858453, relative error: 4.682069e-11\n",
+      "numerical: -2.435635 analytic: -2.435635, relative error: 7.468709e-11\n",
+      "numerical: -6.802200 analytic: -6.802200, relative error: 1.468154e-11\n",
+      "numerical: 4.724738 analytic: 4.724738, relative error: 1.886483e-11\n",
+      "numerical: -16.615162 analytic: -16.615162, relative error: 2.941112e-11\n",
+      "numerical: 29.741926 analytic: 29.741926, relative error: 5.799961e-12\n",
+      "numerical: 29.598365 analytic: 29.598365, relative error: 7.658381e-12\n",
+      "numerical: 7.211889 analytic: 7.224638, relative error: 8.831505e-04\n",
+      "numerical: -8.897366 analytic: -8.929445, relative error: 1.799462e-03\n",
+      "numerical: -7.907881 analytic: -7.907881, relative error: 3.729631e-11\n",
+      "numerical: 11.906887 analytic: 11.906887, relative error: 3.655717e-11\n",
+      "numerical: 26.480761 analytic: 26.480761, relative error: 4.608266e-12\n",
+      "numerical: -0.909432 analytic: -0.909432, relative error: 2.304142e-10\n",
+      "numerical: -3.422227 analytic: -3.422227, relative error: 9.892008e-11\n",
+      "numerical: 3.425536 analytic: 3.425536, relative error: 4.326503e-12\n"
      ]
     }
    ],
@@ -405,16 +388,30 @@
     "### Inline Question 1:\n",
     "It is possible that once in a while a dimension in the gradcheck will not match exactly. What could such a discrepancy be caused by? Is it a reason for concern? What is a simple example in one dimension where a gradient check could fail? *Hint: the SVM loss function is not strictly speaking differentiable*\n",
     "\n",
-    "**Your Answer:** *fill this in.*"
+    "**Your Answer:** \n",
+    "As the hint suggested, the SVM loss function is not differentiable across the max(0, $s_j-s_{y_i}+1$). When $s_j-s_{y_i}+1$ is very close to 0, a small change in W would mean the difference between a 0 gradient and a finite gradient. The gradient at $s_j-s_{y_i}+1=0$ therefore doesn't exist, while in the analytic calculation, I assumed the gradient there to be 0. Thus when the gradient check fails, the analytic result should be 0, while the numerical result is large. \n",
+    "\n",
+    "In practice of gradient descent, even if one ends up on exactly $s_j-s_{y_i}+1=0$, the regularization gradient is non-zero. Thus in one step one would be nudged away from the problem point. Thus using the analytical calculation is still ok. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Naive loss: 9.350424e+00 computed in 0.156262s\n",
+      "(500, 3073) (500, 10)\n",
+      "Vectorized loss: 9.350424e+00 computed in 0.007738s\n",
+      "difference: 0.000000\n"
+     ]
+    }
+   ],
    "source": [
     "# Next implement the function svm_loss_vectorized; for now only compute the loss;\n",
     "# we will implement the gradient in a moment.\n",
@@ -435,11 +432,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Naive loss and gradient: computed in 0.162827s\n",
+      "(500, 3073) (500, 10)\n",
+      "Vectorized loss and gradient: computed in 0.006650s\n",
+      "[  4.45237573   5.20486476   6.63017609   4.02453331   5.04194076\n",
+      "   5.90201368   3.68372238   2.95164484  17.63062661   4.96179508]\n",
+      "difference: 2424.361661\n"
+     ]
+    }
+   ],
    "source": [
     "# Complete the implementation of svm_loss_vectorized, and compute the gradient\n",
     "# of the loss function in a vectorized way.\n",
@@ -459,8 +469,42 @@
     "# The loss is a single number, so it is easy to compare the values computed\n",
     "# by the two implementations. The gradient on the other hand is a matrix, so\n",
     "# we use the Frobenius norm to compare them.\n",
+    "print grad_naive[0]/grad_vectorized[0]\n",
     "difference = np.linalg.norm(grad_naive - grad_vectorized, ord='fro')\n",
     "print 'difference: %f' % difference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.  1.  2.]\n",
+      " [ 3.  4.  5.]\n",
+      " [ 6.  7.  8.]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([2, 2, 2]), array([0, 1, 2]))"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = np.arange(9.).reshape(3, 3)\n",
+    "print x\n",
+    "np.where( x > 5 )"
    ]
   },
   {
