--- a/HW/assignment1/softmax.ipynb
+++ b/HW/assignment1/softmax.ipynb
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -142,7 +142,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss: 2.423177\n",
+      "loss: 2.362498\n",
       "sanity check: 2.302585\n"
      ]
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -186,26 +186,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "numerical: 3.849952 analytic: 3.849952, relative error: 1.344728e-08\n",
-      "numerical: -0.451391 analytic: -0.451391, relative error: 1.008504e-07\n",
-      "numerical: -2.512141 analytic: -2.512141, relative error: 6.551102e-09\n",
-      "numerical: -1.508283 analytic: -1.508283, relative error: 4.263466e-08\n",
-      "numerical: -3.178068 analytic: -3.178068, relative error: 1.151925e-08\n",
-      "numerical: 1.581895 analytic: 1.581895, relative error: 4.073539e-08\n",
-      "numerical: 2.672093 analytic: 2.672092, relative error: 3.725240e-08\n",
-      "numerical: 5.187963 analytic: 5.187963, relative error: 2.108495e-08\n",
-      "numerical: -1.615778 analytic: -1.615778, relative error: 8.952881e-09\n",
-      "numerical: -2.661562 analytic: -2.661563, relative error: 8.154743e-09\n",
-      "numerical: -0.600005 analytic: -0.600005, relative error: 1.273147e-07\n",
-      "numerical: 1.751867 analytic: 1.751867, relative error: 2.007135e-08\n",
-      "numerical: 3.191581 analytic: 3.191581, relative error: 1.722486e-08\n",
-      "numerical: -0.198691 analytic: -0.198691, relative error: 3.382510e-07\n",
-      "numerical: 0.906040 analytic: 0.906040, relative error: 4.319500e-08\n",
-      "numerical: -1.178919 analytic: -1.178919, relative error: 4.858388e-08\n",
-      "numerical: -1.427395 analytic: -1.427395, relative error: 2.339924e-08\n",
-      "numerical: -2.321972 analytic: -2.321972, relative error: 2.097608e-08\n",
-      "numerical: 0.185568 analytic: 0.185568, relative error: 1.757811e-07\n",
-      "numerical: -0.287279 analytic: -0.287280, relative error: 1.916035e-07\n"
+      "numerical: 0.636530 analytic: 0.636529, relative error: 8.063348e-08\n",
+      "numerical: 2.115047 analytic: 2.115047, relative error: 6.621223e-10\n",
+      "numerical: -1.221447 analytic: -1.221447, relative error: 4.259397e-08\n",
+      "numerical: 0.812598 analytic: 0.812598, relative error: 4.301984e-08\n",
+      "numerical: 1.636601 analytic: 1.636601, relative error: 2.735896e-08\n",
+      "numerical: -0.695601 analytic: -0.695601, relative error: 6.502404e-08\n",
+      "numerical: 1.052710 analytic: 1.052710, relative error: 5.987937e-08\n",
+      "numerical: -0.119350 analytic: -0.119350, relative error: 1.750266e-07\n",
+      "numerical: 1.432087 analytic: 1.432087, relative error: 4.199725e-08\n",
+      "numerical: 1.288487 analytic: 1.288487, relative error: 7.669969e-09\n",
+      "numerical: -0.391583 analytic: -0.391583, relative error: 1.703255e-08\n",
+      "numerical: -3.895190 analytic: -3.895190, relative error: 1.249091e-09\n",
+      "numerical: 0.411116 analytic: 0.411116, relative error: 1.328045e-07\n",
+      "numerical: -0.160213 analytic: -0.160213, relative error: 2.114355e-07\n",
+      "numerical: 0.450564 analytic: 0.450563, relative error: 1.019263e-07\n",
+      "numerical: 0.152801 analytic: 0.152801, relative error: 2.477150e-07\n",
+      "numerical: -1.687015 analytic: -1.687015, relative error: 1.963813e-08\n",
+      "numerical: 2.386373 analytic: 2.386373, relative error: 1.162625e-08\n",
+      "numerical: 2.082167 analytic: 2.082167, relative error: 2.206096e-08\n",
+      "numerical: -0.549066 analytic: -0.549066, relative error: 1.352507e-07\n"
      ]
     }
    ],
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -249,18 +249,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "naive loss: 2.423177e+00 computed in 0.160225s\n",
-      "vectorized loss: inf computed in 0.002647s\n",
-      "Loss difference: inf\n",
-      "Gradient difference: 374.731742\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "cs294_129/classifiers/softmax.py:75: RuntimeWarning: divide by zero encountered in log\n",
-      "  loss = - np.mean(np.log(prob))\n"
+      "naive loss: 2.362498e+00 computed in 0.133120s\n",
+      "vectorized loss: 2.362498e+00 computed in 0.027874s\n",
+      "Loss difference: 0.000000\n",
+      "Gradient difference: 114.539314\n"
      ]
     }
    ],
