--- a/HW/assignment1/softmax.ipynb
+++ b/HW/assignment1/softmax.ipynb
@@ -228,14 +228,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 1] [ 0.  1.  2.  0.  0.  0.  0.  0.  0.  0.]\n"
+     ]
+    }
+   ],
    "source": [
-    "aa  = np.array([1,2])\n",
-    "np.amax?"
+    "import numpy as np\n",
+    "aa  = np.array([1,2,1])\n",
+    "bb = np.arange(10)\n",
+    "test = np.zeros(10)\n",
+    "test[bb[aa]] += aa\n",
+    "print bb[aa], test"
    ]
   },
   {
