--- a/HW/assignment1/two_layer_net.ipynb
+++ b/HW/assignment1/two_layer_net.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -435,9 +435,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:astro]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "conda-env-astro-py"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
