--- a/HW/assignment1/softmax.ipynb
+++ b/HW/assignment1/softmax.ipynb
@@ -306,11 +306,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lr 4.000000e-07 reg 1.000000e+05 train accuracy: 0.309347 val accuracy: 0.304000\n",
+      "lr 4.000000e-07 reg 5.000000e+05 train accuracy: 0.307061 val accuracy: 0.307000\n",
+      "lr 4.000000e-07 reg 1.000000e+06 train accuracy: 0.304673 val accuracy: 0.302000\n",
+      "lr 5.000000e-07 reg 1.000000e+05 train accuracy: 0.315020 val accuracy: 0.312000\n",
+      "lr 5.000000e-07 reg 5.000000e+05 train accuracy: 0.315980 val accuracy: 0.320000\n",
+      "lr 5.000000e-07 reg 1.000000e+06 train accuracy: 0.321020 val accuracy: 0.337000\n",
+      "lr 1.000000e-06 reg 1.000000e+05 train accuracy: 0.349408 val accuracy: 0.338000\n",
+      "lr 1.000000e-06 reg 5.000000e+05 train accuracy: 0.343796 val accuracy: 0.332000\n",
+      "lr 1.000000e-06 reg 1.000000e+06 train accuracy: 0.348429 val accuracy: 0.360000\n",
+      "best validation accuracy achieved during cross-validation: 0.360000\n"
+     ]
+    }
+   ],
    "source": [
     "# Use the validation set to tune hyperparameters (regularization strength and\n",
     "# learning rate). You should experiment with different ranges for the learning\n",
@@ -320,8 +337,8 @@
     "results = {}\n",
     "best_val = -1\n",
     "best_softmax = None\n",
-    "learning_rates = [2e-7,4e-7,5e-7]\n",
-    "regularization_strengths = [1e6,5e6,1e7]\n",
+    "learning_rates = [4e-7,5e-7, 1e-6]\n",
+    "regularization_strengths = [1e5,5e5,1e6]\n",
     "\n",
     "################################################################################\n",
     "# TODO:                                                                        #\n",
