--- a/HW/assignment1/two_layer_net.ipynb
+++ b/HW/assignment1/two_layer_net.ipynb
@@ -489,12 +489,33 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hs 200 lr 0.001 reg 0.5 ne 1500 Validation accuracy:  0.497\n",
+      "hs 200 lr 0.002 reg 0.5 ne 1500 Validation accuracy:  0.509\n",
+      "hs 300 lr 0.001 reg 0.5 ne 1500 Validation accuracy:  0.505\n",
+      "hs 300 lr 0.002 reg 0.5 ne 1500 Validation accuracy:  0.507\n"
+     ]
+    }
+   ],
    "source": [
     "best_net = None # store the best model into this \n",
-    "\n",
+    "best_param = None\n",
+    "best_acc = -1\n",
     "#################################################################################\n",
     "# TODO: Tune hyperparameters using the validation set. Store your best trained  #\n",
     "# model in best_net.                                                            #\n",
@@ -507,10 +528,34 @@
     "# write code to sweep through possible combinations of hyperparameters          #\n",
     "# automatically like we did on the previous exercises.                          #\n",
     "#################################################################################\n",
-    "pass\n",
-    "#################################################################################\n",
-    "#                               END OF YOUR CODE                                #\n",
-    "#################################################################################"
+    "# hidden layer size, learning rate, numer of training epochs, and regularization strength\n",
+    "#params =hidden_size:[50,100], l_r:[1e-4,1e-3], reg:[0.1,1] }\n",
+    "h_s=[200,300,500]\n",
+    "l_r=[1e-3,2e-3]\n",
+    "regs=[0.5] \n",
+    "num_epoch = [1500]\n",
+    "input_size = 32 * 32 * 3\n",
+    "num_classes = 10\n",
+    "from itertools import product\n",
+    "for hidden_size,lr, reg,ne in product(h_s,l_r,regs,num_epoch):\n",
+    "    \n",
+    "    net = TwoLayerNet(input_size, hidden_size, num_classes)\n",
+    "\n",
+    "    # Train the network\n",
+    "    stats = net.train(X_train, y_train, X_val, y_val,\n",
+    "                num_hiders=ne, batch_size=200,\n",
+    "                learning_rate=lr, learning_rate_decay=0.95,\n",
+    "                reg=reg, verbose=False)\n",
+    "\n",
+    "    # Predict on the validation set\n",
+    "    val_acc = (net.predict(X_val) == y_val).mean()\n",
+    "    print 'hs',hidden_size,'lr',lr,'reg',reg,'ne',ne, 'Validation accuracy: ', val_acc\n",
+    "    if val_acc>best_acc:\n",
+    "        best_net = net\n",
+    "        best_acc = val_acc\n",
+    "        best_param = {'hs':hidden_size,'lr':lr,'reg':reg,'ne':ne}\n",
+    "print best_acc\n",
+    "print best_param"
    ]
   },
   {
